<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/mainPurple"
        android:gravity="center_vertical"
        android:text="@string/profile"
        android:textColor="@color/secPurple"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/mainPurple"
        android:onClick="goToHome"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:onClick="pickImage"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:srcCompat="@drawable/userlarge" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/firstName"
        android:textColor="@color/mainPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_medium"
        android:inputType="text"
        android:shadowColor="@color/mainPurple"
        android:textColor="@color/mainPurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/lastName"
        android:textColor="@color/mainPurple"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_medium"
        android:inputType="text"
        android:shadowColor="@color/mainPurple"
        android:textColor="@color/mainPurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/mobileNumber"
        android:textColor="@color/mainPurple"
        app:layout_constraintStart_toStartOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_medium"
        android:inputType="text"
        android:shadowColor="@color/mainPurple"
        android:textColor="@color/mainPurple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText3"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/updateProfile"
        app:layout_constraintEnd_toEndOf="@+id/editTextText4"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

</androidx.constraintlayout.widget.ConstraintLayout>
