<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/signIn"
        android:textColor="@color/mainPurple"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signInIcon"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="72dp"
        android:maxHeight="100dp"
        android:minHeight="100dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/josefin_sans_semibold"
        android:text="@string/enterMobileNumber"
        android:textColor="@color/mainPurple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInIcon" />

    <EditText
        android:id="@+id/signInMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_medium"
        android:inputType="phone"
        android:maxLength="10"
        android:shadowColor="@color/mainPurple"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/secPurple"
        android:textColorHighlight="@color/mainPurple"
        android:textColorHint="@color/mainPurple"
        android:textColorLink="@color/mainPurple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/josefin_sans_medium"
        android:text="@string/createAccount"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:onClick="goToCreateNewAccount"/>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/signIn"
        android:onClick="signIn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signInMobile"
        app:layout_constraintStart_toStartOf="@+id/signInMobile"
        app:layout_constraintTop_toBottomOf="@+id/signInMobile" />
</androidx.constraintlayout.widget.ConstraintLayout>